--- a/Opdracht 5.1/index.html
+++ b/Opdracht 5.1/index.html
@@ -11,13 +11,18 @@
             font-family: Copse, serif;
             text-align: center;
         }
-        div.tigerpicture {
+        div.picture-holder {
             box-sizing: border-box;
             height: 450px;
             width: 300px;
             float: left;
             background-color: cyan;
             border: solid 1px black;
+        }
+        div.favoriet {
+            width: 300px;
+            height: 150px;
+            background-color: aqua;
         }
 
         #pics {
